<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout_MysteryJersey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navyBlue"
    tools:context=".Game1">

    <TextView
        android:id="@+id/textView_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/title_game1"
        android:textColor="@color/teal"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_game1Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView_game1Description"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/info_game1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup_jerseySelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_game1Description">

        <RadioButton
            android:id="@+id/radio_twoJersey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/radio1"
            android:textColor="@color/teal"
            android:textSize="35sp" />

        <RadioButton
            android:id="@+id/radio_threeJersey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/radio2"
            android:textColor="@color/teal"
            android:textSize="35sp" />

        <RadioButton
            android:id="@+id/radio_fourJersey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/radio3"
            android:textColor="@color/teal"
            android:textSize="35sp" />

    </RadioGroup>

    <Button
        android:id="@+id/button_Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textColor="@color/teal"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_HomePage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_jerseySelection"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/button_HomePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_game1"
        android:textColor="@color/teal"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Start"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>