<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hockey_background"
    >


    <LinearLayout
        android:id="@+id/linearLayout_mainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <TextView
            android:id="@+id/textView_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="13dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:padding="1dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button_game1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:background="@drawable/main_button"
            android:text="@string/Game1"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="29sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_game2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:background="@drawable/main_button"
            android:text="@string/Game2"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="29sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_game3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:background="@drawable/main_button"
            android:text="@string/Game3"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="29sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:background="@drawable/main_button"
            android:text="@string/contact"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>