<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/LinearLayout_imageButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton_RESTART"
            android:layout_width="121dp"
            android:layout_height="101dp"
            android:background="@drawable/restart"
            android:onClick="restart" />

        <View
            android:id="@+id/view_BLANK"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/imageButton_HOME"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:background="@drawable/exit"
            android:onClick="home" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_endGameScore"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView_NewHighScoreMedal"
            android:layout_width="98dp"
            android:layout_height="95dp"
            android:background="@drawable/new_highest"
            android:visibility="gone"></ImageView>

        <TableLayout
            android:id="@+id/Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/Highscore_Row"
                android:layout_width="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/HIGHSCORE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:text="@string/high_score"
                    android:textColor="@color/darkPink"
                    android:textSize="40sp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/Highscore_Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_highscore"
                    android:textColor="@color/pink"
                    android:textSize="50sp"
                    android:textStyle="bold"></TextView>

            </TableRow>


            <TableRow
                android:id="@+id/Points_Row"
                android:layout_width="match_parent"
                android:layout_marginTop="50dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/POINTS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/points"
                    android:textColor="@color/forest_green"
                    android:textSize="40sp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/Points_Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_points"
                    android:textColor="@color/brown"
                    android:textSize="50sp"
                    android:textStyle="bold"></TextView>

            </TableRow>

        </TableLayout>

    </LinearLayout>

</LinearLayout>