<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Game3MainPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:hapticFeedbackEnabled="true"
    tools:context=".Game3">

    <TextView
        android:id="@+id/textView_titleAndDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:gravity="center"
        android:text="@string/title_game3plusinfo"
        android:textAlignment="center"
        android:textColor="@color/darkBlue"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/CountDown"
        android:textColor="@color/ruby"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/score"
        android:textColor="@color/rosePink"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_timer" />


    <TextView
        android:id="@+id/textView_countDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer"
        android:textColor="@color/wolf"
        android:textSize="250sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_titleAndDescription"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout_Rink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#E1FBFB"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_score">

        <ImageView
            android:id="@+id/puck_1"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:onClick="increaseScore"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/tap" />

        <ImageView
            android:id="@+id/puck_2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:onClick="increaseScore"
            app:layout_column="1"
            app:layout_row="0"
            app:srcCompat="@drawable/tap" />

        <ImageView
            android:id="@+id/puck_3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:onClick="increaseScore"
            app:layout_column="2"
            app:layout_row="0"
            app:srcCompat="@drawable/tap" />

        <ImageView
            android:id="@+id/puck_4"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:onClick="increaseScore"
            app:layout_column="0"
            app:layout_row="1"
            app:srcCompat="@drawable/tap" />

        <ImageView
            android:id="@+id/puck_5"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:onClick="increaseScore"
            app:layout_column="1"
            app:layout_row="1"
            app:srcCompat="@drawable/tap" />

        <ImageView
            android:id="@+id/puck_6"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:onClick="increaseScore"
            app:layout_column="2"
            app:layout_row="1"
            app:srcCompat="@drawable/tap" />

        <ImageView
            android:id="@+id/puck_7"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:onClick="increaseScore"
            app:layout_column="0"
            app:layout_row="2"
            app:srcCompat="@drawable/tap" />

        <ImageView
            android:id="@+id/puck_8"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:onClick="increaseScore"
            app:layout_column="1"
            app:layout_row="2"
            app:srcCompat="@drawable/tap" />

        <ImageView
            android:id="@+id/puck_9"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:onClick="increaseScore"
            app:layout_column="2"
            app:layout_row="2"
            app:srcCompat="@drawable/tap" />


    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>